fix: fix caption text-align

--- a/src/scss/block-editor-style.scss
+++ b/src/scss/block-editor-style.scss
@@ -136,6 +136,28 @@
 	margin-right: unset;
 }
 
+.blocks-gallery-caption {
+	text-align: unset;
+}
+.wp-block-embed,
+.wp-block-image,
+.wp-block-table {
+	figcaption {
+		text-align: unset;
+	}
+}
+
+[data-align="full"] {
+	.wp-block-embed,
+	.wp-block-image,
+	.wp-block-table {
+		figcaption {
+			margin-left: $default-stack;
+			margin-right: $default-stack;
+		}
+	}
+}
+
 .block-editor-block-list__block {
 	margin-top: 0;
 	margin-bottom: 0;
