--- a/src/scss/component/_wp-block.scss
+++ b/src/scss/component/_wp-block.scss
@@ -155,6 +155,30 @@ figure.aligncenter {
 	margin-left: 0;
 }
 
+.blocks-gallery-caption {
+	text-align: unset;
+}
+.wp-block-embed,
+.wp-block-image,
+.wp-block-table {
+	figcaption {
+		text-align: unset;
+	}
+}
+
+:not(.page-template-sidebar-page):not(.post-template-sidebar-post):not(.archive-template-index-sidebar):not(.archive-template-archive-sidebar) {
+	.wp-block-embed,
+	.wp-block-image,
+	.wp-block-table {
+		&.alignfull {
+			figcaption {
+				margin-left: $default-stack;
+				margin-right: $default-stack;
+			}
+		}
+	}
+}
+
 .wp-block-quote {
 	margin-bottom: 0;
 	border: none;
